# Gastos-Pessoais

./: .gitignore  README.md  dados.json  package-lock.json  pyproject.toml  test_integracao_api .py
src/: app.py  gastos.py
src/gastos_pessoais.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_gastos.py
