[project]
name = "gastos-pessoais"
version = "1.0.0"
description = "Gerenciador simples de gastos pessoais via CLI"
authors = [{ name = "Seu Nome", email = "seu@email.com" }]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
gastos = "src.app:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
