[project]
name = "gastos-pessoais"
version = "2.0.0"
description = "Gerenciador simples de gastos pessoais via CLI"
authors = [{ name = "Renata Teixeira", email = "renata.teixeira@sempreceub.com" }]
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]
 
[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
 
[project.scripts]
gastos = "src.app:main"
 
[tool.ruff]
line-length = 88
target-version = "py39"
 
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
 
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: testes que fazem requisições reais à internet (use -m 'not integration' para pular)",
]